--- a/index.html
+++ b/index.html
@@ -4,10 +4,67 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   
+    <link rel="stylesheet" href="/style.css">
     <title>Document</title>
 </head>
 <body>
-    <p>hi</p> hello
-
+    <div class="container">
+        <div class="base"> </div>
+        <div class="string-holder"> </div>
+        <div class="handle"> </div>
+        <div class="top"></div>
+        <div class="pin-container">
+          <div class="row">
+            <div class="pin"></div>
+            <div class="pin"></div>
+          </div>
+          <div class="row">
+            <div class="pin"></div>
+            <div class="pin"></div>
+          </div>
+        </div>
+        <div class="strings">
+          <div class="string"></div>
+          <div class="string"></div>
+          <div class="string"></div>
+          <div class="string"></div>
+        </div>
+        <div class="broken-strings">
+          <div class="br-string"></div>
+          <div class="br-string"></div>
+          <div class="br-string"></div>
+          <div class="br-string"></div>
+        </div>
+        <div class="string-bar"></div>
+        <div class="bars">
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+        </div>
+        <div class="stg-container">
+          <div class="row">
+            <div class="stg"></div>
+            <div class="stg"></div>
+          </div>
+          <div class="row">
+            <div class="stg"></div>
+            <div class="stg"></div>
+          </div>
+        </div>
+      </div>
+      <script src="/script.js"></script>
 </body>
 </html>
