--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
     <link rel="stylesheet" href="/style.css">
-    <title>Document</title>
+    <title>UKULELE</title>
+    <link rel="icon" type="image/x-icon" href="/favicon-image.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap" rel="stylesheet">
 </head>
 <body>
+      <div id="name">UKULELE</div>
     <div class="container">
         <div class="base"> </div>
         <div class="string-holder"> </div>
@@ -65,6 +70,6 @@
           </div>
         </div>
       </div>
-      <script src="/script.js"></script>
+      
 </body>
 </html>
